// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render message for expenses 1`] = `
<div>
  <h2>
    Viewing 
    2
     expense
    s
     totalling
     
    $34.00
  </h2>
</div>
`;

exports[`should render message for only one expense 1`] = `
<div>
  <h2>
    Viewing 
    1
     expense
     totalling
     
    $2.90
  </h2>
</div>
`;
